fix: fix carousel vertical image alignment;

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,17 @@
 .carousel-image{
     margin: auto;
     padding: auto;
-    position: absolute;
+    display: block;
+    position: relative;
     min-width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    height: 100%;
     top: 50%;
-    transform: translateY(-50%), translateX(-50%);
+
+
+}
+
+.vertical{
+    padding: 0 10em 0 10em;
 }
